--- a/src/components/search/Search.scss
+++ b/src/components/search/Search.scss
@@ -6,6 +6,9 @@
 
     input {
       border-radius: 5px;
+      height: 32px;
+      padding-left: 35px;
+      background: white url('../../assets/icons/search.png') no-repeat left center;
     }
   }
 
