--- a/src/index.scss
+++ b/src/index.scss
@@ -27,7 +27,7 @@ button {
 }
 
 body {
-  background-image: url('./assets/background.jpg');
+  background-image: url('assets/bg/background.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
