--- a/src/components/form/Form.scss
+++ b/src/components/form/Form.scss
@@ -25,7 +25,7 @@
     cursor: pointer;
     width: 300px;
     margin-bottom: 10px;
-    background: white url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="black" d="M7 10l5 5 5-5z"/></svg>') no-repeat right 10px center;
+    background: white url('../../assets/icons/down-arrow.png') no-repeat right 10px center;
     background-size: 12px;
   }
 
